# axum-wasm-test

./: .gitignore  Cargo.toml  Enarx.toml  README.md  clean_and_build.sh
.cargo/: config
.github/workflows/: CI.yml
src/: main.rs
