[package]
name = "axum-tokio-wasm-test"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "^1.0.55"
axum = { git = "https://github.com/rjzak/axum", branch = "wasi_wip", features = ["headers"] }
tracing-subscriber = { version="^0.3.8", features = ["env-filter"] }
tracing = "^0.1.29"
chrono = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { git = "https://github.com/rjzak/tokio", branch = "wasi_wip", features = ["macros", "rt"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { git = "https://github.com/rjzak/tokio", branch = "wasi_wip", features = ["macros", "rt-multi-thread"] }
